Fix service issues and enhance documentation
- Fix traffic-replay FastAPI startup event handling (lifespan context manager)
- Add OpenSearch jvm.options configuration file
- Fix Suricata Dockerfile permissions
- Update memory bank with current system status (6/8 services operational)
- Add comprehensive Mermaid architecture diagram to README
- Update port mappings in documentation (9201, 5602)
- Core ML pipeline fully operational with 0.09-0.23ms latency

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+# Docker Compose configuration for Suricata ML-IDS
 
 services:
   # Suricata IDS Service
@@ -31,6 +31,8 @@ services:
       context: ./services/feature-extractor
       dockerfile: Dockerfile
     container_name: feature-extractor
+    ports:
+      - "8001:8001"
     volumes:
       - ./data/pcaps:/app/pcaps:ro
       - ./data/datasets:/app/datasets
@@ -54,6 +56,8 @@ services:
       context: ./services/ml-trainer
       dockerfile: Dockerfile
     container_name: ml-trainer
+    ports:
+      - "8002:8002"
     volumes:
       - ./data/datasets:/app/datasets:ro
       - ./data/models:/app/models
@@ -105,6 +109,8 @@ services:
       context: ./services/traffic-replay
       dockerfile: Dockerfile
     container_name: traffic-replay
+    ports:
+      - "8003:8003"
     volumes:
       - ./data/pcaps:/app/pcaps
       - ./data/synthetic:/app/synthetic
@@ -147,7 +153,7 @@ services:
       - opensearch-data:/usr/share/opensearch/data
       - ./services/opensearch/config:/usr/share/opensearch/config
     ports:
-      - "9200:9200"
+      - "9201:9200"
       - "9600:9600"
     networks:
       - ids-network
@@ -162,7 +168,7 @@ services:
     image: opensearchproject/opensearch-dashboards:2.11.0
     container_name: opensearch-dashboards
     ports:
-      - "5601:5601"
+      - "5602:5601"
     environment:
       OPENSEARCH_HOSTS: '["http://opensearch:9200"]'
       DISABLE_SECURITY_DASHBOARDS_PLUGIN: "true"
