--- a/services/realtime-detector/Dockerfile
+++ b/services/realtime-detector/Dockerfile
@@ -18,10 +18,9 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy application code
 COPY src/ ./src/
-COPY config/ ./config/
 
 # Create necessary directories
-RUN mkdir -p /app/models /app/logs
+RUN mkdir -p /app/models /app/logs /app/config
 
 # Expose API port
 EXPOSE 8080
