--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -136,14 +136,10 @@ services:
     image: opensearchproject/opensearch:2.11.0
     container_name: opensearch
     environment:
-      - cluster.name=ids-cluster
-      - node.name=opensearch-node1
-      - discovery.seed_hosts=opensearch-node1
-      - cluster.initial_cluster_manager_nodes=opensearch-node1
-      - bootstrap.memory_lock=true
-      - "OPENSEARCH_JAVA_OPTS=-Xms2g -Xmx2g"
       - "DISABLE_INSTALL_DEMO_CONFIG=true"
       - "DISABLE_SECURITY_PLUGIN=true"
+      - "discovery.type=single-node"
+      - "OPENSEARCH_JAVA_OPTS=-Xms512m -Xmx512m"
     ulimits:
       memlock:
         soft: -1
@@ -153,7 +149,6 @@ services:
         hard: 65536
     volumes:
       - opensearch-data:/usr/share/opensearch/data
-      - ./services/opensearch/config:/usr/share/opensearch/config
     ports:
       - "9200:9200"
       - "9600:9600"
